--- a/RegexTester/UserControls/RegexTesterMain.xaml
+++ b/RegexTester/UserControls/RegexTesterMain.xaml
@@ -18,7 +18,7 @@
                 <MenuItem Name="MenuItem_NewTab" Header="New Tab" InputGestureText="Ctrl + T" Click="MenuItem_NewTab_Click" />
             </ContextMenu>
         </TabControl.ContextMenu>
-        <TabItem Header="+" Name="tabItemAdd" ToolTip="New Tab" FontWeight="Normal" FontSize="12" IsSelected="False" />
+        <TabItem Header="+" Name="tabItemCreator" ToolTip="New Tab" FontWeight="Normal" FontSize="12" IsSelected="False" />
         <TabItem Header="Regex Test 1" Name="tabItemTest1" IsSelected="True">
             <uc:RegexTesterPage />
         </TabItem>
