--- a/RegexTester/UserControls/RegexTesterPage.xaml
+++ b/RegexTester/UserControls/RegexTesterPage.xaml
@@ -66,7 +66,7 @@
         </Style>
         <Style x:Key="commandButton" TargetType="{x:Type Button}">
             <Setter Property="Margin" Value="3" />
-            <Setter Property="BorderBrush" Value="Blue" />
+            <Setter Property="BorderBrush" Value="Gray" />
         </Style>
     </UserControl.Resources>
     <UserControl.DataContext>
